<resources>
    <string name="app_name">PullToLoadView</string>
    <string name="refresh">Refresh</string>
    <string name="pull_from_start">Pull from start</string>
    <string name="pull_from_start_auto_load_more">Pull from start auto load more</string>
    <string name="pull_from_end">Pull from end</string>
    <string name="both">Both</string>
    <string name="disabled">Disabled</string>
    <string name="manual_only">Manual only</string>
    <string name="show_empty_view">show empty view</string>
    <string name="show_error_view">show error view</string>
    <string name="demo_1">RecyclerView demo</string>
    <string name="demo_1_title">PullToLoadRecyclerView V</string>
    <string name="demo_2">ListView demo</string>
    <string name="demo_2_title">PullToLoadListView</string>
    <string name="demo_3">RecyclerView horizontal demo</string>
    <string name="demo_3_title">PullToLoadRecyclerView H</string>
    <string name="demo_4">WebView demo</string>
    <string name="demo_4_title">PullToLoadWebView</string>
    <string name="demo_5">ScrollView demo</string>
    <string name="demo_5_title">PullToLoadScrollView</string>
    <string name="demo_6">HorizontalScrollView demo</string>
    <string name="demo_6_title">PullToLoadHorizontalScrollView</string>
    <string name="demo_7">GridView demo</string>
    <string name="demo_7_title">PullToLoadGridView</string>
    <string name="demo_8">ExpandableView demo</string>
    <string name="demo_8_title">PullToLoadExpandableView</string>
    <string name="error">Error</string>
    <string name="empty">Empty</string>

    <string-array name="title">
        <item>概述</item>
        <item>目标</item>
        <item>设计原则</item>
    </string-array>
    <string-array name="content">
        <item>我们挑战自我，为用户创造了崭新的视觉设计语言。与此同时，新的设计语言除了遵循经典设计定则，还汲取了最新的科技，秉承了创新的设计理念。这就是Material Design。这份文档是动态更新的，将会随着我们对 Material Design 的探索而不断迭代、升级</item>
        <item>我们希望创造一种独一无二的底层系统，在这个系统的基础之上，构建跨平台和超越设备尺寸的统一体验。遵循基本的移动设计定则，同时支持触摸、语音、鼠标、键盘等输入方式。</item>
        <item>实体感就是(通过设计方式来表达)隐喻通过构建系统化的动效和空间合理化利用，并将两个理念合二为一，构成了实体隐喻。与众不同的触感是实体的基础，这一灵感来自我们对纸墨的研究，但是我们相信，随着科技的进步，应用前景将不可估量。

实体的表面和边缘提供基于真实效果的视觉体验，熟悉的触感让用户可以快速地理解和认知。实体的多样性可以让我们呈现出更多反映真实世界的设计效果，但同时又绝不会脱离客观的物理规律。

光效、表面质感、运动感这三点是解释物体运动规律、交互方式、空间关系的关键。真实的光效可以解释物体之间的交合关系、空间关系，以及单个物体的运动。</item>
    </string-array>
</resources>
